# create_object

./: Dockerfile  Makefile  README.md  apache-config.conf  dockerfile_backup_poetry.txt
backup_dockerfile/: py3_10_12.txt
create_object/: .env
create_object/app/Http/Controllers/: -PythonController.php  ImageController.php  PythonController.php  ZikkenController.php
create_object/create_object_py/: .gitignore  Makefile  create_env.sh  edit_image_name.sh  predict.sh  pyproject.toml  surface.sh  unified_language.txt
create_object/create_object_py/src/: -param_create_surface.py  __init__.py  __main__.py  calculator.py  category.json  coordinate.py  create_surface.py  create_vector26.py  edit_mesh_airplane.py  edit_mesh_chair.py  edit_mesh_table.py  edit_normal.py  edit_normal_method.py  log.py  model.py  my_plt.py  param.json  param_create_surface.py  predict_point_cpu.py  read_image.py  test.py  vector26.npy  zikken.py
create_object/create_object_py/tests/: check_library.py
create_object/public/: category.json  check_library.py  read_image.py
create_object/public/css/: home_style.css  sample.js  upload_form.css  zikken.css
create_object/resources/views/: home.blade.php  upload_form.blade.php  zikken.blade.php
create_object/routes/: web.php
create_object/src/: predict_point_cpu.py  read_image.py  test.py
