[tool.poetry]
name = "create_object_py"
version = "0.1.0"
description = "画像上の物体を3Dオブジェクトに変換するモジュール"
authors = ["kawanoichi"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.12"
opencv-python = "^4.8.1.78"
numpy = "^1.26.2"
open3d = "^0.17.0"
torch = "^2.1.1"
scikit-learn = "^1.3.2"
pyyaml = "^6.0.1"
addict = "^2.4.0"
pillow = "^10.1.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
